# libshcodecs

./: config.h.in  configure.ac  shcodecs-uninstalled.pc.in  shcodecs.pc.in
src/examples/: Makefile.am
src/libshcodecs/: Makefile.am  decoder_private.h  encoder_common.c  encoder_private.h  h264_encode.c  m4driverif-uiomux.c  mpeg4_encode.c  shcodecs_decoder.c  shcodecs_encoder.c  vpu_lock.h  vpu_mux.h
src/tests/: Makefile.am
src/tools/: Makefile.am  avcbeinputuser.c  shcodecs-capenc.c  shcodecs-enc.c  shcodecs-play.c
